objects/Deal_Registration__c/Deal_Registration__c.object-meta.xml
<CustomObject>
    <label>Deal Registration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Registration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>