objects/Deal_Registration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account is required to Submit for Approval</inlineHelpText>
    <label>End Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Registration (Account)</relationshipLabel>
    <relationshipName>DealRegistration</relationshipName>
    <type>Lookup</type>
</CustomField>