objects/Deal_Registration__c/fields/Converted_OppReg__c.field-meta.xml
<CustomField>
    <fullName>Converted_OppReg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field provides a link to the Opportunity Registration (i.e., Lead) record from which this Deal Registration was ported as a part of the Zift Implementation project</inlineHelpText>
    <label>Converted OppReg</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Deal Registration</relationshipLabel>
    <relationshipName>Deal_Registration</relationshipName>
    <type>Lookup</type>
</CustomField>