objects/Deal_Registration__c/fields/Current_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver__c</fullName>
    <description>This field is to display the &quot;Current Approver&quot; name at each stage after submitting the record for Approval.</description>
    <inlineHelpText>We are showing the  &quot;Current Approver&quot; name at each stage after submitting the record for Approval.</inlineHelpText>
    <label>Current Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>