objects/Deal_Registration__c/fields/Date_Approved_Extension__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_Extension__c</fullName>
    <description>Case 46157 Extension Approval.</description>
    <inlineHelpText>Date Extension was approved.</inlineHelpText>
    <label>Date Approved Extension</label>
    <type>Date</type>
</CustomField>