objects/Deal_Registration__c/fields/Date_Rejected_Extension__c.field-meta.xml
<CustomField>
    <fullName>Date_Rejected_Extension__c</fullName>
    <label>Date Rejected Extension</label>
    <type>Date</type>
</CustomField>