objects/Deal_Registration__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Registration (Distributor)</relationshipLabel>
    <relationshipName>DealRegistration1</relationshipName>
    <type>Lookup</type>
</CustomField>