objects/Deal_Registration__c/fields/End_Customer_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Account_Owner__c</fullName>
    <description>Ref: Marketing, Mark Chow 
INC0125676</description>
    <formula>Account__r.Owner.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer Account Owner</label>
    <type>Text</type>
</CustomField>