objects/Deal_Registration__c/fields/End_Customer_Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Account_Segment__c</fullName>
    <description>INC0131406 Nick Scala info pulls in from End Customer Account
2021-04-23 Extended field length to 255 per Robert&apos;s suggestion.</description>
    <inlineHelpText>Info pulls in from End Customer Account at the time account is assigned.</inlineHelpText>
    <label>End Customer Account Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>