objects/Deal_Registration__c/fields/EndCustomerAccount1__c.field-meta.xml
<CustomField>
    <fullName>EndCustomerAccount1__c</fullName>
    <description>This field is created to get end customer account and referred in the email template as per the below salesforce known issue.
https://salesforce.stackexchange.com/questions/185301/email-template-merge-fields-account-name</description>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer Account (formula)</label>
    <type>Text</type>
</CustomField>