objects/Deal_Registration__c/fields/How_was_Opportunity_sourced__c.field-meta.xml
<CustomField>
    <fullName>How_was_Opportunity_sourced__c</fullName>
    <label>How was Opportunity sourced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Rep. Prospecting</fullName>
            </value>
            <value>
                <fullName>Partner Hosted Event</fullName>
            </value>
            <value>
                <fullName>Tanium Hosted Event</fullName>
            </value>
            <value>
                <fullName>Call Blitz</fullName>
            </value>
            <value>
                <fullName>Partner-Driven Campaign</fullName>
            </value>
            <value>
                <fullName>Customer Assessment</fullName>
            </value>
            <value>
                <fullName>Tanium Trial / Proof of Concept</fullName>
            </value>
            <value>
                <fullName>Tanium Sales Sourced</fullName>
            </value>
            <value>
                <fullName>Other / None of the Above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>