objects/Deal_Registration__c/fields/Lead_18ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_18ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead_18ID</label>
    <type>Text</type>
</CustomField>