objects/Deal_Registration__c/fields/Lead_Owner_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Level_1__c</fullName>
    <formula>Owner:User.Level_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The L1 of the owner of this record</inlineHelpText>
    <label>Owner Level 1</label>
    <type>Text</type>
</CustomField>