objects/Deal_Registration__c/fields/Lead_Owner_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Level_3__c</fullName>
    <formula>Owner:User.Level_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The L3 of the owner of this record</inlineHelpText>
    <label>Owner Level 3</label>
    <type>Text</type>
</CustomField>