objects/Deal_Registration__c/fields/Lead_Owner_Level_4__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Level_4__c</fullName>
    <formula>Owner:User.Level_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The L4 of the owner of this record</inlineHelpText>
    <label>Owner Level 4</label>
    <type>Text</type>
</CustomField>