objects/Deal_Registration__c/fields/Lead_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Owner&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Reg</relationshipName>
    <type>Lookup</type>
</CustomField>