objects/Deal_Registration__c/fields/Lead_Owner_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Manager_Email__c</fullName>
    <label>Deal Owner&apos;s Manager Email</label>
    <type>Email</type>
</CustomField>