objects/Deal_Registration__c/fields/Mapped_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Map an existing opportunity to this Deal, but first check to ensure the opportunity does not already have an active Deal</inlineHelpText>
    <label>Mapped Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Registration</relationshipLabel>
    <relationshipName>Opportunity_DealReg</relationshipName>
    <type>Lookup</type>
</CustomField>