objects/Deal_Registration__c/fields/Matched_Account_Derived_Endpoints__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Derived_Endpoints__c</fullName>
    <formula>Account__r.Tanium_Derived_Estimated_Endpoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account Derived Endpoints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>