objects/Deal_Registration__c/fields/Matched_Account_Owner_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Owner_Level_2__c</fullName>
    <formula>Account__r.Owner.Level_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account Owner Level 2</label>
    <type>Text</type>
</CustomField>