objects/Deal_Registration__c/fields/New_Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Opp_Name__c</fullName>
    <formula>Account__r.Name  + &quot; - &quot; +  TEXT(or_Opportunity_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Opp Name</label>
    <type>Text</type>
</CustomField>