objects/Deal_Registration__c/fields/Opp_Reg_Approval_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Opp_Reg_Approval_Assignment__c</fullName>
    <label>Approval Assignment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>