objects/Deal_Registration__c/fields/Opp_Reg_EXT_Bus_Days_Clone__c.field-meta.xml
<CustomField>
    <fullName>Opp_Reg_EXT_Bus_Days_Clone__c</fullName>
    <description>This field is to calculate the number of business days between Date approved and the created Date.</description>
    <inlineHelpText>This field is to calculate the number of business days between Date approved and the created Date.</inlineHelpText>
    <label>Days in Approval Cycle (Extension)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>