objects/Deal_Registration__c/fields/Opp_Reg_Ext_Request_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Opp_Reg_Ext_Request_Date_Time__c</fullName>
    <description>INC0137001 Nick Scala Opp Reg Ext Approval Timestamp Calculations</description>
    <label>Extension Request Date/Time</label>
    <type>DateTime</type>
</CustomField>