objects/Deal_Registration__c/fields/Opp_Reg_Extension_Count__c.field-meta.xml
<CustomField>
    <fullName>Opp_Reg_Extension_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Case 46157 2020-10-06 Number of times opp reg extension requests have completed approvals or rejections.</description>
    <inlineHelpText>Number of times extension requests have completed approvals or rejections.</inlineHelpText>
    <label>Extension Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>