objects/Deal_Registration__c/fields/Opp_Reg_Mapped_Opp_Changed__c.field-meta.xml
<CustomField>
    <fullName>Opp_Reg_Mapped_Opp_Changed__c</fullName>
    <description>2020-10-13 Duyen changed Description and Help Text
Original purposed was to trigger physical change to opp reg when Mapped Opp Status change to CLOSED WON or Failed.  This is needed to trigger WebI integration.</description>
    <inlineHelpText>Captures changes to the Deal</inlineHelpText>
    <label>Mapped Opportunity Changed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>