objects/Deal_Registration__c/fields/Opp_Reg_NEW_Bus_Days_Clone__c.field-meta.xml
<CustomField>
    <fullName>Opp_Reg_NEW_Bus_Days_Clone__c</fullName>
    <description>This field is to calculate the number of business days between the Extension Requested time and Extension Date approved fields.</description>
    <inlineHelpText>This field is to calculate the number of business days between the Extension Requested time and Extension Date approved fields.</inlineHelpText>
    <label>DEPRECATED - Days in Approval Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>