objects/Deal_Registration__c/fields/Opp_Reg_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opp_Reg_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DealRegistration2</relationshipName>
    <type>Lookup</type>
</CustomField>