objects/Deal_Registration__c/fields/Opp_Reg_Owner_is_AVP_RVP__c.field-meta.xml
<CustomField>
    <fullName>Opp_Reg_Owner_is_AVP_RVP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2020-12-08 use to send emails: If owner is AVP/RVP, don&apos;t send request for action and approval to Owner Manager</description>
    <label>Deal Owner is AVP/RVP?</label>
    <type>Checkbox</type>
</CustomField>