objects/Deal_Registration__c/fields/Opp_Reg_Owner_is_AVP_RVP_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>Opp_Reg_Owner_is_AVP_RVP_FORMULA__c</fullName>
    <description>Update existing record upon deployment</description>
    <formula>IF ( 
CONTAINS(Owner:User.UserRole.Name, &quot;AVP&quot;), TRUE,
IF ( 
CONTAINS(Owner:User.UserRole.Name, &quot;RVP&quot;), TRUE,

FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Owner is AVP/RVP? (Formula)</label>
    <type>Checkbox</type>
</CustomField>