objects/Deal_Registration__c/fields/Opp_Reg_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Opp_Reg_Type_Text__c</fullName>
    <description>Text of Opportunity Registration Type</description>
    <formula>Text( or_Opportunity_Registration__c)</formula>
    <inlineHelpText>Text of Opportunity Registration Type</inlineHelpText>
    <label>Type Text</label>
    <type>Text</type>
</CustomField>