objects/Deal_Registration__c/fields/Opportunity_Size__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Size__c</fullName>
    <label>Opportunity Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>