objects/Deal_Registration__c/fields/Opportunity_source_details__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_source_details__c</fullName>
    <inlineHelpText>Please provide additional detail related to the question above (Campaign name, event details, etc.)</inlineHelpText>
    <label>Opportunity source details</label>
    <type>TextArea</type>
</CustomField>