objects/Deal_Registration__c/fields/or_Business_license_in_SLED_market__c.field-meta.xml
<CustomField>
    <fullName>or_Business_license_in_SLED_market__c</fullName>
    <label>Business license in SLED market?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>