objects/Deal_Registration__c/fields/or_Create_Opportunity_upon_Approval__c.field-meta.xml
<CustomField>
    <fullName>or_Create_Opportunity_upon_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If no opportunity exists, check this option to auto-create an opportunity upon Deal Approval</inlineHelpText>
    <label>Create Opportunity upon Approval?</label>
    <type>Checkbox</type>
</CustomField>