objects/Deal_Registration__c/fields/OR_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>OR_Created_Date__c</fullName>
    <defaultValue>now()</defaultValue>
    <description>2020-07-24 Field is a necessity due to RingLead merge which resulted in incorrect Created Dates for Opp Reg records.  Write access limited by permission set &quot;Opportunity Registration&quot;</description>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>