objects/Deal_Registration__c/fields/or_Customer_agreement_in_place__c.field-meta.xml
<CustomField>
    <fullName>or_Customer_agreement_in_place__c</fullName>
    <inlineHelpText>Portal Prompt: Select either &quot;Y&quot; option if Partner transacting with End Customer has an active software or hardware agreement or contract vehicle to purchase</inlineHelpText>
    <label>Customer agreement in place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y - Services and Software and Hardware</fullName>
            </value>
            <value>
                <fullName>Y - Software and Hardware</fullName>
            </value>
            <value>
                <fullName>Y - Software only</fullName>
            </value>
            <value>
                <fullName>Y - Hardware only</fullName>
            </value>
            <value>
                <fullName>Y - Services only</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Y - Services, Software and Hardware</fullName>
                <isActive>false</isActive>
                <label>Y - Services, Software and Hardware</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>