objects/Deal_Registration__c/fields/or_Customer_IT_landscape_knowledge__c.field-meta.xml
<CustomField>
    <fullName>or_Customer_IT_landscape_knowledge__c</fullName>
    <inlineHelpText>Entered by Partner if Expected Purchase Amount is &gt;$600k - Portal Prompt: Select the option that most accurately describes Partners knowledge of End Customer IT landscape relevant to opportunity pursuit</inlineHelpText>
    <label>Customer IT landscape knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Extensive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>