objects/Deal_Registration__c/fields/or_Customer_relationship_details__c.field-meta.xml
<CustomField>
    <fullName>or_Customer_relationship_details__c</fullName>
    <inlineHelpText>Portal Prompt: Describe main point of contact, projects being consulted on, meeting cadence with End Customer and influence position</inlineHelpText>
    <label>Customer relationship details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>