objects/Deal_Registration__c/fields/or_Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>or_Date_Approved__c</fullName>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>