objects/Deal_Registration__c/fields/or_Date_Expire__c.field-meta.xml
<CustomField>
    <fullName>or_Date_Expire__c</fullName>
    <description>2020-03-04 Opportunity Registration</description>
    <formula>or_Date_Approved__c + 180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>2020-03-04 Opportunity Registration</inlineHelpText>
    <label>Date Expire</label>
    <type>Date</type>
</CustomField>