objects/Deal_Registration__c/fields/or_Distributor_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>or_Distributor_Contact_Email__c</fullName>
    <label>Distributor Contact Email</label>
    <type>Email</type>
</CustomField>