objects/Deal_Registration__c/fields/or_Executive_Mgmt_Team_Relationship__c.field-meta.xml
<CustomField>
    <fullName>or_Executive_Mgmt_Team_Relationship__c</fullName>
    <inlineHelpText>Entered by Partner if Expected Purchase Amount is &gt;$600k - Portal Prompt: Describe relationships with End Customer&apos;s executive management including access thereto, relationship standing and frequency and type of interaction</inlineHelpText>
    <label>Executive Management Team Relationship</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>