objects/Deal_Registration__c/fields/or_Expected_Purchase_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>or_Expected_Purchase_Amount_USD__c</fullName>
    <label>Expected Purchase Amount (USD $)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purchase_Amount</valueSetName>
    </valueSet>
</CustomField>