objects/Deal_Registration__c/fields/or_Expiry_Date_Extension_Opp_Reg__c.field-meta.xml
<CustomField>
    <fullName>or_Expiry_Date_Extension_Opp_Reg__c</fullName>
    <description>Expiry Date for extensions</description>
    <inlineHelpText>Expiry Date for extensions</inlineHelpText>
    <label>Expiry Date - Extension</label>
    <type>Date</type>
</CustomField>