objects/Deal_Registration__c/fields/or_Expiry_Date_New_Opp_Reg__c.field-meta.xml
<CustomField>
    <fullName>or_Expiry_Date_New_Opp_Reg__c</fullName>
    <description>Expiry Date for new Opp Reg Approval.
INC0161411- FLS changed..</description>
    <inlineHelpText>Expiry Date for new Deal approval</inlineHelpText>
    <label>Expiry Date - New Deal Reg</label>
    <type>Date</type>
</CustomField>