objects/Deal_Registration__c/fields/or_Ext_Opp_Reg_Time_CAM_Completed__c.field-meta.xml
<CustomField>
    <fullName>or_Ext_Opp_Reg_Time_CAM_Completed__c</fullName>
    <label>Extension Time CAM Completed</label>
    <type>DateTime</type>
</CustomField>